--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
     #- run: echo y | android update sdk --no-ui --all --filter "tools,platform-tools,android-23"
     #- run: echo y | android update sdk --no-ui --all --filter "build-tools-23.0.2"
     # The following line was run implicitly in your 1.0 builds based on what CircleCI inferred about the structure of your project. In 2.0 you need to be explicit about which commands should be run. In some cases you can discard inferred commands if they are not relevant to your project.
-    - run: if [ -a ./gradlew ]; then gradlew dependencies; else gradle dependencies; fi
+    - run: ./gradlew dependencies
     # Save dependency cache
     - save_cache:
         key: v1-dep-{{ .Branch }}-{{ epoch }}
