--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,8 +55,8 @@ jobs:
         # Any branch if there are none on the default branch - this should be unnecessary if you have your default branch configured correctly
         - v1-dep-
     # This is based on your 1.0 configuration file or project settings
-    #- run: echo y | android update sdk --no-ui --all --filter "tools,platform-tools,android-23"
-    #- run: echo y | android update sdk --no-ui --all --filter "build-tools-23.0.2"
+    - run: echo y | android update sdk --no-ui --all --filter "tools,platform-tools,android-23"
+    - run: echo y | android update sdk --no-ui --all --filter "build-tools-23.0.2"
     # The following line was run implicitly in your 1.0 builds based on what CircleCI inferred about the structure of your project. In 2.0 you need to be explicit about which commands should be run. In some cases you can discard inferred commands if they are not relevant to your project.
     - run: ./gradlew dependencies
     # Save dependency cache
